--- a/signup.html
+++ b/signup.html
@@ -144,6 +144,15 @@
           messagingSenderId: "879370220022",
           appId: "1:879370220022:web:54026fadf5fe54177997d7"
         };
+  //       const firebaseConfig = {
+  //   apiKey: "AIzaSyCSvLUQUFVyu3i5K6fbh59VjEc6CzrGjrc",
+  //   authDomain: "music-player-8c130.firebaseapp.com",
+  //   projectId: "music-player-8c130",
+  //   storageBucket: "music-player-8c130.appspot.com",
+  //   messagingSenderId: "696651522261",
+  //   appId: "1:696651522261:web:6aa2f8f5926f8e9599425c",
+  //   measurementId: "G-6NQEBW1HK2"
+  // };
         const app = initializeApp(firebaseConfig);
         const database = getDatabase(app);
         const db = getFirestore(app);
